Made single validator for reusability and changed the specification matching logic, encoded the searchTerm for use of special characters